--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9943238c",
    "metadata": {},
    "outputs": [
@@ -123,6 +123,11 @@
       "Note: Stdout and stderr for collaborator-8 will be written to /tmp/openfed_node_collaborator-8_stdout, /tmp/openfed_node_collaborator-8_stderr respectively.\n",
       "Note: Stdout and stderr for collaborator-9 will be written to /tmp/openfed_node_collaborator-9_stdout, /tmp/openfed_node_collaborator-9_stderr respectively.\n",
       "Note: Stdout and stderr for collaborator-10 will be written to /tmp/openfed_node_collaborator-10_stdout, /tmp/openfed_node_collaborator-10_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-11 will be written to /tmp/openfed_node_collaborator-11_stdout, /tmp/openfed_node_collaborator-11_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-12 will be written to /tmp/openfed_node_collaborator-12_stdout, /tmp/openfed_node_collaborator-12_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-13 will be written to /tmp/openfed_node_collaborator-13_stdout, /tmp/openfed_node_collaborator-13_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-14 will be written to /tmp/openfed_node_collaborator-14_stdout, /tmp/openfed_node_collaborator-14_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-15 will be written to /tmp/openfed_node_collaborator-15_stdout, /tmp/openfed_node_collaborator-15_stderr respectively.\n",
       ">>> Load Props\n",
       "<OpenFed> FederatedProperties\n",
       "+--------------------+------------+\n",
@@ -134,14 +139,14 @@
       "+---------+---------------------+------------+------+\n",
       "| backend |     init_method     | world_size | rank |\n",
       "+---------+---------------------+------------+------+\n",
-      "|   gloo  | file:///...aredfile |     11     |  0   |\n",
+      "|   gloo  | file:///...aredfile |     16     |  0   |\n",
       "+---------+---------------------+------------+------+\n",
       "\n",
       "\n",
       ">>> Seed everything...\n",
       ">>> Log argparse to json...\n",
       ">>> Config device...\n",
-      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 15, 'dataset_args': {}, 'epochs': 1, 'rounds': 40, 'act_clts': 15, 'act_clts_rat': 1.0, 'tst_act_clts': 15, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/aggregator.json', 'device': device(type='cpu')}\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 15, 'dataset_args': {}, 'epochs': 1, 'rounds': 400, 'act_clts': 15, 'act_clts_rat': 1.0, 'tst_act_clts': 15, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/aggregator.json', 'device': device(type='cpu')}\n",
       "\tLet's use cpu.\n",
       ">>> Load dataset...\n",
       "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
@@ -162,12 +167,42 @@
       "\tActivated Train Part: 15\n",
       "\tTest Part: 15\n",
       "\tActivated Test Part: 15\n",
-      "train: loss: 1.03, accuracy: 0.81 test: loss: 1.04, accuracy: 0.80: 100%|█| 40/4\n"
+      "train: loss: 0.73, accuracy: 0.84 test: loss: 0.72, accuracy: 0.83:  24%|▏| 95/4\n",
+      "Exception in thread Thread-1:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/api.py\", line 92, in run\n",
+      "    maintainer.step()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 306, in step\n",
+      "    return self._aggregator_step(*args, **kwargs)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 370, in _aggregator_step\n",
+      "    flag = self.download()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 262, in download\n",
+      "    data = self.transfer(to=False)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/functional.py\", line 33, in _fed_context\n",
+      "    return safe_call(self, *args, **kwargs)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/functional.py\", line 24, in safe_call\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 255, in transfer\n",
+      "    return self.pipe.download()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/federated/pipe.py\", line 167, in download\n",
+      "    return self.transfer(False)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/federated/pipe.py\", line 235, in transfer\n",
+      "    data = self.pull()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/federated/pipe.py\", line 267, in pull\n",
+      "    distributed_c10d.gather_object(None, received, dst=rank, group=self.pg)\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages/torch/distributed/distributed_c10d.py\", line 1581, in gather_object\n",
+      "    all_gather(object_size_list, local_size, group=group)\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages/torch/distributed/distributed_c10d.py\", line 1870, in all_gather\n",
+      "    work.wait()\n",
+      "RuntimeError: [/Users/distiller/project/conda/conda-bld/pytorch_1616554799287/work/third_party/gloo/gloo/transport/uv/unbound_buffer.cc:103] Timed out waiting 1800000ms for send operation to complete\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "!python -m openfed.tools.simulator --nproc 11 --logdir /tmp/ ../main.py\\\n",
+    "!python -m openfed.tools.simulator --nproc 16 --logdir /tmp/ ../main.py\\\n",
     "    --task mnist\\\n",
     "    --data_root ../benchmark/datasets/mnist/data\\\n",
     "    --partition dirichlet\\\n",
@@ -175,7 +210,7 @@
     "    --num_parts 1000\\\n",
     "    --tst_num_parts 15\\\n",
     "    --epochs 1\\\n",
-    "    --rounds 40\\\n",
+    "    --rounds 400\\\n",
     "    --act_clts 15\\\n",
     "    --tst_act_clts 15\\\n",
     "    --max_acg_step -1\\\n",
@@ -188,85 +223,6 @@
     "    --log_dir logs\\\n",
     "    --exp_name fedavg_dirichlet_mnist\\\n",
     "    --seed 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b06d74c1",
-   "metadata": {},
-   "source": [
-    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
-    "\n",
-    "Run following commands in the root path of `benchmark-lightly`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "91c4c7f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/densechen/miniconda3/envs/openfed/bin/python: No module named openfed.tools.launch\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "! rm -rf /tmp/fedavg_dirichlet_mnist.share\\\n",
-    "! rm -rf /tmp/fedavg_dirichlet_mnist\\\n",
-    "! rm -rf ./logs/mnist_dirichlet/fedavg\\\n",
-    "\n",
-    "! cd .. && python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_dirichlet_mnist.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
-    "    --partition_args alpha:100.0\\\n",
-    "    --num_parts 1000\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 10\\\n",
-    "    --tst_act_clts -1\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 0.1\\\n",
-    "    --leader_lr 1.0\\\n",
-    "    --bz 100\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name fedavg_dirichlet_mnist\\\n",
-    "    --seed 0\\"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad831d8a",
-   "metadata": {},
-   "source": [
-    "### Run All"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c64568ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: cmd\r\n"
-     ]
-    }
-   ],
-   "source": [
-    " cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'"
    ]
   },
   {
