--- a/docs/femnist.ipynb
+++ b/docs/femnist.ipynb
@@ -222,182 +222,148 @@
    "id": "8f94229c",
    "metadata": {},
    "source": [
-    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
-    "\n",
-    "Run following commands in the root path of `benchmark-lightly`.\n",
-    "\n",
-    "```bash\n",
-    "function cmd(){\n",
-    "    fed_optim=$1\n",
-    "\n",
-    "    task_name=\"femnist\"\n",
-    "    exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "    # Delete cache file\n",
-    "    rm -rf /tmp/${exp_name}.share\n",
-    "    rm -rf /tmp/${exp_name}\n",
-    "    rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "    # Run\n",
-    "    python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "        --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "        --task ${task_name}\\\n",
-    "        --data_root benchmark/datasets/${task_name}/data\\\n",
-    "        --epochs 1\\\n",
-    "        --rounds 20\\\n",
-    "        --act_clts 100\\\n",
-    "        --tst_act_clts 100\\\n",
-    "        --max_acg_step -1\\\n",
-    "        --optim ${fed_optim}\\\n",
-    "        --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "        --follower_lr 1e-1\\\n",
-    "        --leader_lr 1.0\\\n",
-    "        --bz 10\\\n",
-    "        --gpu\\\n",
-    "        --log_level SUCCESS\\\n",
-    "        --log_dir logs\\\n",
-    "        --exp_name ${exp_name}\\\n",
-    "        --seed 0\n",
-    "}\n",
-    "```"
+    "## FedAvg"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0c5f9be7",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c2e0d91",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: Stdout and stderr for collaborator-1 will be written to /tmp/openfed_node_collaborator-1_stdout, /tmp/openfed_node_collaborator-1_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-2 will be written to /tmp/openfed_node_collaborator-2_stdout, /tmp/openfed_node_collaborator-2_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-3 will be written to /tmp/openfed_node_collaborator-3_stdout, /tmp/openfed_node_collaborator-3_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-4 will be written to /tmp/openfed_node_collaborator-4_stdout, /tmp/openfed_node_collaborator-4_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-5 will be written to /tmp/openfed_node_collaborator-5_stdout, /tmp/openfed_node_collaborator-5_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-6 will be written to /tmp/openfed_node_collaborator-6_stdout, /tmp/openfed_node_collaborator-6_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-7 will be written to /tmp/openfed_node_collaborator-7_stdout, /tmp/openfed_node_collaborator-7_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-8 will be written to /tmp/openfed_node_collaborator-8_stdout, /tmp/openfed_node_collaborator-8_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-9 will be written to /tmp/openfed_node_collaborator-9_stdout, /tmp/openfed_node_collaborator-9_stderr respectively.\n",
+      "Note: Stdout and stderr for collaborator-10 will be written to /tmp/openfed_node_collaborator-10_stdout, /tmp/openfed_node_collaborator-10_stderr respectively.\n",
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+--------------------+------------+\n",
+      "|        role        | nick_name  |\n",
+      "+--------------------+------------+\n",
+      "| openfed_aggregator | aggregator |\n",
+      "+--------------------+------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     11     |  0   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'femnist', 'network_args': {}, 'data_root': '../benchmark/datasets/femnist/data', 'partition': 'iid', 'partition_args': {}, 'num_parts': 100, 'tst_num_parts': 10, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': 10, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 10, 'gpu': True, 'log_dir': 'logs/femnist/fedavg_', 'seed': 0, 'props': '/tmp/aggregator.json', 'exp_name': 'fedavg_', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      "SimulationDataset(total_parts: 36, total_samples: 8964, current_parts: 0)\n",
+      "SimulationDataset(total_parts: 36, total_samples: 1013, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      ">>> Build network...\n",
+      "Femnist(\n",
+      "  (conv1): Sequential(\n",
+      "    (0): Conv2d(1, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "    (1): ReLU()\n",
+      "  )\n",
+      "  (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv2): Sequential(\n",
+      "    (0): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "    (1): ReLU()\n",
+      "  )\n",
+      "  (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear): Sequential(\n",
+      "    (0): Linear(in_features=3136, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "  )\n",
+      "  (logits): Linear(in_features=512, out_features=62, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Maintainer...\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      ">>> Register hooks...\n",
+      "\tTrain Part: 36\n",
+      "\tActivated Train Part: 10\n",
+      "\tTest Part: 36\n",
+      "\tActivated Test Part: 10\n",
+      "  0%|                                                    | 0/20 [00:00<?, ?it/s]/Users/densechen/code/OpenFed/openfed/functional/agg.py:31: UserWarning: Load param state for 0 params, 8 params are ignored.\n",
+      "  warnings.warn(f'Load param state for {success} params, '\n",
+      "  0%|                                                    | 0/20 [00:01<?, ?it/s]\n",
+      "Exception in thread Thread-1:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/api.py\", line 85, in run\n",
+      "    **reduce_func_kwargs)\n",
+      "  File \"/Users/densechen/code/benchmark-lightly/benchmark/utils/reduce.py\", line 11, in meta_reduce_log\n",
+      "    reduce_meta['mode'] = meta_list[0]['mode']\n",
+      "IndexError: list index out of range\n",
+      "\n",
+      "Killing subprocess 50764\n",
+      "Killing subprocess 50765\n",
+      "Killing subprocess 50766\n",
+      "Killing subprocess 50767\n",
+      "Killing subprocess 50768\n",
+      "Killing subprocess 50769\n",
+      "Killing subprocess 50770\n",
+      "Killing subprocess 50771\n",
+      "Killing subprocess 50772\n",
+      "Killing subprocess 50773\n",
+      "Killing subprocess 50774\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/runpy.py\", line 193, in _run_module_as_main\n",
+      "    \"__main__\", mod_spec)\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/runpy.py\", line 85, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 214, in <module>\n",
+      "    main()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 197, in main\n",
+      "    sigkill_handler(signal.SIGTERM, None)\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 131, in sigkill_handler\n",
+      "    returncode=last_return_code, cmd=cmd)\n",
+      "subprocess.CalledProcessError: Command '['/Users/densechen/miniconda3/envs/openfed/bin/python', '-u', '../main.py', '--task', 'femnist', '--data_root', '../benchmark/datasets/femnist/data', '--epochs', '1', '--rounds', '20', '--act_clts', '10', '--tst_act_clts', '10', '--max_acg_step', '-1', '--optim', 'fedavg', '--optim_args', 'momentum:0.9', 'weight_decay:1e-4', '--co_lr', '1e-1', '--ag_lr', '1.0', '--bz', '10', '--gpu', '--log_dir', 'logs', '--seed', '0', '--props=/tmp/collaborator-10.json']' returned non-zero exit status 1.\n"
+     ]
+    }
+   ],
    "source": [
-    "### Run All\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedavg'; cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "836db013",
-   "metadata": {},
-   "source": [
-    "## Plot Curves"
+    "!python -m openfed.tools.simulator --nproc 11  --logdir /tmp ../main.py\\\n",
+    "    --task femnist\\\n",
+    "    --data_root ../benchmark/datasets/femnist/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 10\\\n",
+    "    --tst_act_clts 10\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedavg\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --co_lr 1e-1\\\n",
+    "    --ag_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_dir logs\\\n",
+    "    --seed 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f43619f",
+   "id": "e9d79ff1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "from benchmark.utils.plot import plot\n",
-    "\n",
-    "task_name = \"femnist\"\n",
-    "\n",
-    "items = dict(\n",
-    "    FedAvg=f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "    FedSgd=f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "    FedEla=f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "    FedProx=f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "    FedScaffold=f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    ")\n",
-    "\n",
-    "files = items.values()\n",
-    "labels = items.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d6bdc12",
-   "metadata": {},
-   "source": [
-    "### Train Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8635c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(\n",
-    "    files=files,\n",
-    "    labels=labels,\n",
-    "    attributes=\"accuracy\",\n",
-    "    mode='train'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffcc230c",
-   "metadata": {},
-   "source": [
-    "### Train Loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f233dd56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(\n",
-    "    files=files,\n",
-    "    labels=labels,\n",
-    "    attributes=\"loss\",\n",
-    "    mode=\"train\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cc2c74f",
-   "metadata": {},
-   "source": [
-    "### Test Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5472fe89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(\n",
-    "    files=files,\n",
-    "    labels=labels,\n",
-    "    attributes=\"accuracy\",\n",
-    "    mode=\"test\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b03a924f",
-   "metadata": {},
-   "source": [
-    "### Test Loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daf06b98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(\n",
-    "    files=files,\n",
-    "    labels=labels,\n",
-    "    attributes=\"loss\",\n",
-    "    mode='test'\n",
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
